--- a/TwoInOneApp/app/src/main/res/values/strings.xml
+++ b/TwoInOneApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">TwoInOneApp</string>
-
     <string name="textview">TextView</string>
     <string name="name">Name</string>
     <string name="textview2">TextView</string>
@@ -10,4 +9,7 @@
     <string name="guessBtn">Guess</string>
     <string name="number_game_app">Number Game App</string>
     <string name="guess_phrase_app">Guess phrase App</string>
+       // for shared preference
+    <string name="preference_file_key">com.example.helloworld.PREFERENCE_FILE_KEY</string>
+
 </resources>
