--- a/ToDoApp/app/src/main/res/values/strings.xml
+++ b/ToDoApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="textview">TextView</string>
     <string name="checkbox">CheckBox</string>
     <string name="todo">TODO</string>
+
+    // for shared preference
+    <string name="preference_file_key">com.example.ToDo.PREFERENCE_FILE_KEY</string>
+
 </resources>
