--- a/TwoInOneApp/app/src/main/res/values/strings.xml
+++ b/TwoInOneApp/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="number_game_app">Number Game App</string>
     <string name="guess_phrase_app">Guess phrase App</string>
        // for shared preference
-    <string name="preference_file_key">com.example.helloworld.PREFERENCE_FILE_KEY</string>
+    <string name="preference_file_key">com.example.TwoInOneApp.PREFERENCE_FILE_KEY</string>
 
 </resources>
